# HPM5361CF_WY_SLS

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md
Python-C_Second-Time/: Makefile  README.md  build_mingw.bat
Python-C_Second-Time/app/: TB_Two_Driver.c  TB_Two_Driver.h
Python-C_Second-Time/examples/: emergency_stop.c  read_status.c  retract_dual_pedals.c
Python-C_Second-Time/include/: ids830abs_registers.h  pedal_controller.h  pedal_error.h  pedal_platform.h  rs485_transport.h  servo_axis.h
Python-C_Second-Time/src/: ids830abs_utils.c  pedal_controller.c  pedal_platform_hpm.c  pedal_platform_win32.c  rs485_transport_hpm.c  rs485_transport_win32.c  servo_axis.c
boards/hpm5361/: board.c  board.h  pinmux.h
docs/: pedal_hpm_porting_report.md
docs/superpowers/plans/: 2026-07-07-vscode-cmake-local-adaptation.md  2026-07-20-demo-c01-pedal-loop-test.md
docs/superpowers/specs/: 2026-07-07-vscode-cmake-local-adaptation-design.md  2026-07-20-demo-c01-pedal-loop-test-design.md
python-C_three-times/: Demo-C_01.c  Demo-C_01.h
src/app/: main.c
src/bsp/: drv_button.c  drv_button.h  drv_dma.h  drv_led.c  drv_led.h  drv_mcan.c  drv_mcan.h  drv_relay.c  drv_relay.h  drv_rs485.c  drv_rs485.h  drv_timer_extra.c  drv_timer_extra.h  drv_watchdog.c  drv_watchdog.h  ring_buffer.c  ring_buffer.h
移植之前的文件/boards/: CMakeLists.txt
移植之前的文件/boards/hpm5361/: board.c  board.h  hpm5361.yaml  pinmux.c
移植之前的文件/src/app/: main.c
移植之前的文件/src/bsp/: drv_button.c  drv_button.h  drv_dma.c  drv_led.c  drv_led.h  drv_mcan.c  drv_mcan.h  drv_relay.c  drv_relay.h  drv_rs485.c  drv_rs485.h
