if(BOARD_SEARCH_DIR)
    if(EXISTS ${BOARD_SEARCH_DIR}/${BOARD})
        add_subdirectory(${BOARD_SEARCH_DIR}/${BOARD} ${BOARD})
    elseif(EXISTS ${BOARD_SEARCH_DIR})
        add_subdirectory(${BOARD_SEARCH_DIR} ${BOARD})
    else()
        add_subdirectory(${HPM_BOARD_DIR})
    endif()
else()
    add_subdirectory(${HPM_BOARD_DIR})
endif()
